--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ img{
 #recipe pre{
   white-space: pre-wrap;
   word-wrap: break-word;
+  line-height: 1.5;
   padding: 2.5em 1.2em 1.2em 1.2em;
 }
 #hide-recipe{
